welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: not found: value &&
		case a>=10 && a<=20 && b>=10 && b<=20 => Math.max(a,b)
                                             ^max1020:4: error: not found: value &&
		case a>=10 && a<=20 && (b<10 || b>20) => a
                                    ^max1020:5: error: not found: value &&
		case b>=10 && b<=20 && (a<10 || a>20) => b
                                    ^max1020:6: error: not found: value !
		case !(a>=10 && a<=20 && b>=10 && b<=20) => 0
                     ^