welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	(a,b) match {
		case a>=10 && a<=20 && b>=10 && b<=20 => Math.max(a,b)
		case a>=10 && a<=20 && (b<10 || b>20) => a
		case b>=10 && b<=20 && (a<10 || a>20) => b
		case !(a>=10 && a<=20 && b>=10 && b<=20) => 0
	}
}